Refactor inference rules & add open-key detection
Major refactor of the metamodel inference engine and ruleset plus related model and sample updates. Key changes:

- Renamed and renumbered creation rules (C1..C5) and refinement rules (R1..R9), reordered rule evaluation, and removed the old pass-through file in favor of a new R9 implementation.
- Added corpus-level pre-scan to MetamodelInferenceEngine (childKeysByClass) and IRuleEngine.distinctChildKeys() to detect named-map containers based on observed distinct child keys rather than hardcoded names.
- Introduced OpenKeySpaceDetector to identify open key-space patterns (open scalar maps and open list-maps) and added a unit test for it.
- Updated inference rule implementations to use the new API and detectors (adjusted class/attribute logic and logging messages accordingly).
- Ecore and PlantUML metamodel outputs updated (docker-compose and github_actions): added Deploy/Resources/Limits/Ipam classes, moved Secret/Ipam definitions, and adjusted relationships; GitHub Actions model gains Service, Input, and workflow_call/input fixes.
- Added sample files: docker-compose secrets-app.yml and updated wordpress sample; added GitHub Actions samples reusable-build.yml and integration-tests.ym.

These changes make container/name-map detection domain-agnostic and more robust across corpora, simplify rule naming/ordering, and provide new samples for testing.